Thu Jul 20 11:00:00 2000  Kirthika Parameswaran  <kirthika@cs.wustl.edu>

	* ace/Caching_Utility_T.cpp: To get rid of egcs warnings on Linux,
	static casted both fields of ACE_MAX in method <clear_cache>.
	Thanks to David Levine <levine@cs.wustl.edu> for pointing this
	out. Also changed ssize_t to size_t in the cast.
	
Thu Jul 20 08:04:13 2000  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

	* ace/OS.i: Rearranged some code so that the operator *=
	  and the ACE_Time_Value copy constructor appear in the right
 	  order...  Thanks to David for reporting this.

Wed Jul 19 22:51:42 2000  Steve Huston  <shuston@riverace.com>

        * ace/OS.i (ACE_OS::cond_timedwait): For pSOS, convert absolute
          time value to relative, expressed in ticks. Account for pSOS
          behavior on timeout - returns with mutex unlocked. Thanks to
          Sarmeesha Reddy <sarmeesha@bigfoot.com> for this fix.

Wed Jul 19 19:30:00 2000  Kirthika Parameswaran  <kirthika@cs.wustl.edu>

	* ace/Caching_Utility_T.cpp: Rectified a typo made in method
	<clear_cache>.
	
Wed Jul 19 17:12:50 2000  John Heitmann  <jwh1@cs.wustl.edu>

	* ace/OS.h
	* ace/OS.i
	  Wrapped most pace calls with ACE_OSCALL to handle EINTR
	  correctly, minor corrections and adjustments to pace
	  functions.

Wed Jul 19 16:50:00 2000  Kirthika Parameswaran  <kirthika@cs.wustl.edu>

	* ace/Caching_Utility_T.cpp: Changed the formula to calculate the
	<entries_to_remove> as per the contribution by Edan Ayal
	<edana@bandwiz.com>. Thanks to Edan for discovering this bug and
	contributing the solution for it.

Wed Jul 19 08:40:10 2000  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/OS.i: Moved the new operator *= so that it's *after*
	  the inlined sec() and usec() members.

Tue Jul 18 23:30:59 2000  John Heitmann  <jwh1@cs.wustl.edu>

	* ace/OS.h

	  Modified earlier changes to improve support for LynxOS
	  signals using pace.

	* ace/ACE.cpp
	* ace/OS_Memory.h
