@@ -1,3 +1,9 @@
+Thu Jul 20 14:19:06 2000  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>
+
+	* ace/Thread_Manager.h: Updated the comments on the various *kill*()
+	  methods to clarify what they do and where they are not portable.
+  	  Thanks to Steve Huston for motivating this.
+
 Thu Jul 20 11:00:00 2000  Kirthika Parameswaran  <kirthika@cs.wustl.edu>
 
 	* ace/Caching_Utility_T.cpp: To get rid of egcs warnings on Linux,
